docs/content/v2.14/yugabyte-platform/_index.md
---
title: YugabyteDB Anywhere
headerTitle: YugabyteDB Anywhere
linkTitle: YugabyteDB Anywhere
description: YugabyteDB delivered as a private database-as-a-service for enterprises.
headcontent: YugabyteDB delivered as a private database-as-a-service for enterprises.
menu:
  v2.14_yugabyte-platform:
    name: "Overview"
    parent: yugabytedb-anywhere
    identifier: overview-yp
    weight: 10
    params:
      classes: separator
type: indexpage
---

### Overview

YugabyteDB Anywhere is best fit for mission-critical deployments, such as production or pre-production testing. The YugabyteDB Anywhere UI is used in a highly-available mode, allowing you to create and manage YugabyteDB universes, or clusters, on one or more regions across public cloud and private on-premises data centers.

YugabyteDB Anywhere is a containerized application that you can install using [Replicated](https://www.replicated.com/) for production, performance, or failure mode testing. For local development or simple functional testing you can also use [YugabyteDB](/preview/tutorials/quick-start/macos/).

You can access YugabyteDB Anywhere via an Internet browser that has been supported by its maker in the past 24 months and that has a market share of at least 0.2%. In addition, you can access YugabyteDB Anywhere via most mobile browsers, except Opera Mini.

YugabyteDB Anywhere offers three levels of user accounts: Super Admin, Admin, and Read-only, with the latter having rather limited access to functionality. Unless otherwise specified, the YugabyteDB Anywhere documentation describes the functionality available to a Super Admin user.

## Get started

<br>

<div class="row">

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="install-yugabyte-platform/install/public-cloud/">
      <div class="head">
        <img class="icon" src="/images/section_icons/quick_start/install.png" aria-hidden="true" />
        <div class="title">Install</div>
      </div>
      <div class="body">
        Installing YugabyteDB Anywhere in any environment
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="configure-yugabyte-platform/configure/aws/">
      <div class="head">
        <img class="icon" src="/images/section_icons/quick_start/create_cluster.png" aria-hidden="true" />
        <div class="title">Configure</div>
      </div>
      <div class="body">
        Configuring YugabyteDB Anywhere for various cloud providers
      </div>
    </a>
  </div>

</div>
